--- a/server/compose.yml
+++ b/server/compose.yml
@@ -4,6 +4,8 @@ services:
   mysql:
     container_name: mysql
     image: mysql:8.4.0
+    volumes:
+      - mysql-data:/var/lib/mysql
     restart: always
     platform: linux/amd64
     environment:
@@ -12,6 +14,7 @@ services:
       MYSQL_PASSWORD: root
     ports:
       - 3306:3306
+
 volumes:
-  mysql:
-    name: mysql
+  mysql-data:
+    name: mysql-data
